@@ -4,6 +4,10 @@
 
 Currently missing!
 
+```
+<path-to-jdk>\java --module-path <lib> --add-modules javafx.controls,javafx.fxml —jar <java-application-jar>
+```
+
 ## Install
 
 ### JavaFX
